IDEA-328027 PersistentFSConnector - get rid of AppExecutorUtil
GitOrigin-RevId: 36fbdc268b502daaf70fd3d8a91156243357172a